# theo-ai-voice-agent

./: ## Você é Dr.md  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASTERISK_CONFIG_SUMMARY.md  ASTERISK_MIGRATION_COMPLETE.md  ASTERISK_VIABILITY_ANALYSIS.md  BROWSER_PHONE.md  CHANGELOG.md  CHANGELOG_v2.1.md  CHANGELOG_v2.2_PHASE1.md  CHANGELOG_v2.3_PHASE2_1.md  DOCKER_DEPLOY_PHASE1.md  DOCKER_FIX_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  FIXES_APPLIED.md  FREESWITCH_ALTERNATIVES_ANALYSIS.md  INTEGRATION_GUIDE_PHASE1.md  INTEGRATION_GUIDE_PHASE2_1.md  Maya Chen — Realtime Voice AI .md  Ollama Infrastructu.md  PHASE2_ROADMAP.md  PHASES_SUMMARY.md  PIPECAT_RESEARCH.md  PIPECAT_RESEARCH_INDEX.md  PIPECAT_RTP_ANALYSIS.md  PROJECT_INIT_SUMMARY.md  README.md  REVIEW_REPORT.md  RULES.md  SETUP_EXECUTION_REPORT.md  Termos.txt  WEBRTC_INTEGRATION_PLAN.md  WEBRTC_TESTING_GUIDE.md  config.yaml  (+22 more)
apps/ai-inference/: Dockerfile  README.md  Voice_Agents_Telecom_Guia_Completo.md  pyproject.toml
apps/ai-inference/docs/: ARCHITECTURE.md  MODULAR_PLATFORM.md
apps/ai-inference/scripts/: run_e2e_test.sh  test_e2e_webrtc.py  test_webrtc_browser.html
apps/ai-inference/src/: __init__.py  main.py
apps/ai-inference/src/api/: __init__.py  agents.py  dependencies.py  rest.py  signaling.py  websocket.py
apps/ai-inference/src/api/schemas/: __init__.py  agent_schemas.py
apps/ai-inference/src/core/: __init__.py  config.py  session.py  session_manager.py
apps/ai-inference/src/events/: __init__.py  client_events.py  server_events.py  types.py
apps/ai-inference/src/models/: __init__.py  agent_config.py  audio.py  conversation.py  session.py
apps/ai-inference/src/providers/: __init__.py  base.py  exceptions.py  manager.py
apps/ai-inference/src/providers/asr/: __init__.py  deepgram.py  openai_whisper.py
apps/ai-inference/src/providers/llm/: __init__.py  groq.py  ollama.py  openai.py
apps/ai-inference/src/providers/tts/: __init__.py  elevenlabs.py  openai.py
apps/ai-inference/src/providers/vad/: __init__.py  energy.py  silero.py
apps/ai-inference/src/webrtc/: __init__.py  connection.py  datachannel.py  tracks.py
apps/ai-inference/tests/: __init__.py  conftest.py  test_agents.py  test_providers.py  test_session.py  test_signaling.py  test_webrtc.py  test_websocket.py
libs/voice-pipeline/: ARCHITECTURE.md  AUDIT.md  AUDIT_LANGCHAIN_COMPARISON.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  REVIEW_AGENT_LOOP.md  ROADMAP-GAPS.md  ROADMAP.md  ROADMAP_STREAMING.md  pyproject.toml  quickstart.py  requirements-dev.txt  requirements-extras.txt  requirements.txt
libs/voice-pipeline/examples/: README.md  basic_pipeline.py  benchmark_buffers.py  benchmark_warmup.py  local_providers.py  openai_realtime.py  quickstart.py  validate_framework.py
libs/voice-pipeline/examples/webapp/: README.md  requirements.txt  run.sh
libs/voice-pipeline/examples/webapp-webrtc/: .env.example  README.md  cleanup.sh  requirements.txt  run.sh
libs/voice-pipeline/examples/webapp-webrtc/backend/: __init__.py  config.py  main.py
libs/voice-pipeline/examples/webapp-webrtc/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
libs/voice-pipeline/examples/webapp-webrtc/tests/: __init__.py  conftest.py  test_integration.py  test_webrtc_transport.py
libs/voice-pipeline/examples/webapp/backend/: agent.py  main.py  record_ref_voice.py
libs/voice-pipeline/examples/webapp/frontend/: app.js  index.html
libs/voice-pipeline/observability/: docker-compose.yml  example_usage.py  otel-collector-config.yml
libs/voice-pipeline/observability/grafana/dashboards/: voice-pipeline.json
libs/voice-pipeline/src/voice_pipeline/: __init__.py  agent.py
libs/voice-pipeline/src/voice_pipeline/agents/: __init__.py  base.py  events.py  loop.py  router.py  state.py  tool_node.py
libs/voice-pipeline/src/voice_pipeline/audio/: __init__.py  echo_suppressor.py  preprocessor.py
libs/voice-pipeline/src/voice_pipeline/callbacks/: __init__.py  base.py  context.py
libs/voice-pipeline/src/voice_pipeline/chains/: __init__.py  base.py  base_voice_chain.py  builder.py  conversation.py  streaming.py
libs/voice-pipeline/src/voice_pipeline/cli/: __init__.py  main.py
libs/voice-pipeline/src/voice_pipeline/core/: __init__.py  builder.py  config.py  events.py  pipeline.py  state_machine.py
libs/voice-pipeline/src/voice_pipeline/interfaces/: __init__.py  asr.py  interruption.py  llm.py  rag.py  realtime.py  transport.py  tts.py  turn_taking.py  vad.py
libs/voice-pipeline/src/voice_pipeline/mcp/: __init__.py  agent.py  client.py  server.py  tools.py  types.py
libs/voice-pipeline/src/voice_pipeline/memory/: __init__.py  base.py  buffer.py  episodic.py  summary.py  tokenizer.py
libs/voice-pipeline/src/voice_pipeline/multi_agent/: __init__.py  collaboration.py  graph.py  handoff.py  state.py  supervisor.py  team.py
libs/voice-pipeline/src/voice_pipeline/prompts/: __init__.py  base.py  chat.py  persona.py
libs/voice-pipeline/src/voice_pipeline/providers/: __init__.py  base.py  decorators.py  discovery.py  (+2 more)
libs/voice-pipeline/tests/: __init__.py  conftest.py  mocks.py  test_agent_callbacks.py  test_agent_events.py  test_agents.py  test_architecture.py  test_audio_preprocessor.py  test_backchannel_context.py  test_buffer.py  test_callbacks.py  test_chains.py  test_circuit_breaker.py  test_cli.py  test_device_fallback.py  test_e2e_pipeline.py  test_echo_suppression.py  test_events.py  test_filler_injection.py  test_gpu_metrics.py  test_inactivity.py  test_integration_components.py  test_interface_rag.py  test_interruption_strategy.py  test_jitter_metrics.py  test_mcp.py  test_memory.py  test_multi_agent.py  test_noise_aware_vad.py  test_optimized_buffer.py  test_otel_handler_enhanced.py  test_pipeline_builder.py  test_pipeline_integration.py  test_prompts.py  test_provider_asr_deepgram.py  test_provider_asr_faster_whisper.py  test_provider_asr_nemotron.py  test_provider_asr_openai.py  test_provider_asr_whispercpp.py  test_provider_base.py  (+34 more)
(+473 files in other folders)
