[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-agent"
version = "1.0.0"
description = "Modular AI Voice Agent with SIP/RTP support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Voice Engineering Team", email = "engineering@voiceagent.com"}
]

dependencies = [
    # SIP/RTP (pjsua2 must be compiled from source - see installation docs)
    # "pjsua2>=2.12",  # Not available in PyPI, requires manual compilation

    # AI Models
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",

    # ASR (Whisper)
    "openai-whisper>=20231117",

    # TTS (Kokoro) - Install separately if needed
    # "kokoro-onnx>=0.1.0",  # Not available in PyPI

    # Audio processing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",

    # Async
    "asyncio>=3.4.3",
    "aiofiles>=23.2.0",

    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Utils
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
voiceagent = "src.main:cli"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: marks tests as benchmark tests (run with pytest -m benchmark)",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
