[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-pipeline"
version = "0.1.0"
description = "A modular, streaming voice conversation pipeline for building voice agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Paulo", email = "paulo@example.com" }
]
keywords = [
    "voice",
    "pipeline",
    "streaming",
    "conversation",
    "asr",
    "tts",
    "llm",
    "vad",
    "real-time",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/voice-pipeline"
Documentation = "https://github.com/example/voice-pipeline#readme"
Repository = "https://github.com/example/voice-pipeline"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voice_pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
